--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-    <title>Sultan</title>
+    <title>Hello, World!</title>
 </head>
 
 <body>
-    <h1> Hello World!</h1>
+    <h1> Hello, World!</h1>
 </body>
 
 </html>
